Test/senamic_test/jlj_test/test1.output
Error type 7 at Line 8: Type mismatched for operands "=="
Error type 7 at Line 14: Type mismatched for operands "=="
Error type 5 at Line 19: Type mismatched for assignment "="
