Test/senamic_test/jlj_test/test1.cmm
// test compst
int main(){
    int i;
    i = 1;
    while(i == 1){
        float i;
        i = 0.5;
        while(i == 5){              // error 7
            int i[4][3];
            while(i[4][3] == 3){
                struct{
                    int i;
                }i;
                while(i.i == 0.5){  // error 7
                    int i;
                }
            }
        }
    }i = 0.5;                       // error 5
    {
        int i;{
            float i;
            {
                struct i{
                    int i;
                }j;
            }
        }
    }
    {
        float i;
    }

}int i;